unpackaged/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__AggregationScope__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__AggregationScope__c</fullName>
    <description>Indicates whether quote lines referencing this schedule should be aggregated within quote, group or not at all for the purposes of volume discount calculation.</description>
    <inlineHelpText>Spécifiez le mode d&#39;agrégation des quantités de ligne de devis pour les produits qui utilisent ce barème. Par défaut, la quantité de chaque ligne est considérée de façon indépendante (même pour un produit identique).</inlineHelpText>
    <label>Aggregation Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>