unpackaged/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__ConstraintField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ConstraintField__c</fullName>
    <description>For cross-order schedules, if you want to limit which subscriptions and assets are used to calculate your volume discounts, select the field that you want to match against the same field on the quote.</description>
    <inlineHelpText>Sélectionnez le champ que vous souhaitez comparer avec le même champ de devis.</inlineHelpText>
    <label>Constraint Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>