unpackaged/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__CrossOrders__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__CrossOrders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether volume discount should be applied on combined quantities across prior orders.</description>
    <inlineHelpText>Sélectionnez la case si vous souhaitez étendre les remises sur volume au volume total appartenant à ce client (c.-à-d. la quantité du devis plus les achats antérieurs).</inlineHelpText>
    <label>Cross Orders</label>
    <type>Checkbox</type>
</CustomField>