unpackaged/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__CrossProducts__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__CrossProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that indicates whether volume discount calculations should aggregate quantities of all products using this schedule.</description>
    <inlineHelpText>Sélectionnez la case pour agréger les quantités de tous les produits utilisant ce barème pour le calcul de remise sur volume. Les remises par palier ne peuvent être utilisées pour les remises sur les produits croisés.</inlineHelpText>
    <label>Cross Products</label>
    <type>Checkbox</type>
</CustomField>