unpackaged/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__IncludeBundledProducts__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__IncludeBundledProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Quantities of Bundled Product Options will be included in the Aggregation Scope</description>
    <inlineHelpText>Si cette option est sélectionnée, les quantités des options de produits d&#39;offres groupées sont incluses dans l&#39;étendue d&#39;agrégation.</inlineHelpText>
    <label>Include Bundled Quantities</label>
    <type>Checkbox</type>
</CustomField>