unpackaged/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__OriginalDiscountSchedule__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__OriginalDiscountSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The discount schedule that this price schedule is originated from.</description>
    <inlineHelpText>Barème de remise d&#39;où ce barème de prix est issu.</inlineHelpText>
    <label>Original Discount Schedule</label>
    <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
    <relationshipLabel>Price Schedules</relationshipLabel>
    <relationshipName>PriceSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>