unpackaged/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__Product__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product that this Price Schedule applies to. Only used in combination with Price Book lookup to assign product/price book specific schedule.</description>
    <inlineHelpText>Produit auquel ce barème de prix s&#39;applique. Utilisé uniquement avec une référence Catalogue de prix pour attribuer un barème spécifique au produit/catalogue de prix.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Price Schedules</relationshipLabel>
    <relationshipName>PriceSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>