unpackaged/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__QuoteLine__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__QuoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quote Line that this Price Schedule applies to. Only used in combination with Price Schedule Override on Quote Line Editor UI.</description>
    <inlineHelpText>Ligne de devis à laquelle ce barème de prix s&#39;applique. Utilisée uniquement avec l&#39;option Remplacement du barème de prix dans l&#39;interface utilisateur de l&#39;éditeur de ligne de devis.</inlineHelpText>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Price Schedules</relationshipLabel>
    <relationshipName>PriceSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>