unpackaged/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__TermDiscount__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TermDiscount__c</fullName>
    <description>Term discount in total applied to this price schedule.  The value is available only for Tiered price type.  For Volume price type, the term discount is available for each price tier.</description>
    <inlineHelpText>Remise totale sur la durée appliquée à ce barème de prix. Cette valeur est disponible uniquement pour le type de prix différencié. Pour le type de prix au volume, la remise sur la durée est disponible pour chaque niveau de prix.</inlineHelpText>
    <label>Term Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>