unpackaged/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__UsePriceForAmount__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__UsePriceForAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the user defined Price Schedule&#39;s Discount Unit will be set to Price.</description>
    <inlineHelpText>Si cette case est cochée, l&#39;unité de remise du prix défini par l&#39;utilisateur est définie sur le prix.</inlineHelpText>
    <label>Use Price For Amount</label>
    <type>Checkbox</type>
</CustomField>